--- a/_sass/theme/post.html
+++ b/_sass/theme/post.html
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="row logo">
                 <div class="col-lg-7">
-                    <h1>UniFreak</h1>
+                    <h1>Trinity Blood</h1>
                 </div>
 
 
@@ -89,10 +89,10 @@
                         </address>
 
                         <ul class="col-lg-6 col-md-6 col-sm-6">
-                            <li class="qq"><i class="fa fa-qq"></i> &nbsp;&nbsp;744910240</li>
-                            <li class="email"><i class="fa fa-envelope"></i> <a href="mailto:fanghao90s@gmail.com"> &nbsp;&nbsp;fanghao90s@gmail.com</a></li>
-                            <li class="tel"><i class="fa fa-mobile"></i> <a href="tel:15671542698">&nbsp;&nbsp; 15671542698</a></li>
-                            <li class="github"><i class="fa fa-github"></i> <a href="https://github.com/UniFreak"> &nbsp;&nbsp;https://github.com/UniFreak</a></li>
+							<li class="qq"><i class="fa fa-qq"></i> &nbsp;&nbsp;757563349</li>
+							<li class="email"><i class="fa fa-envelope"></i> <a href="mailto:757563349@qq.com"> &nbsp;&nbsp;757563349@qq.com</a></li>
+							<li class="tel"><i class="fa fa-mobile"></i> <a href="tel:18672948856">&nbsp;&nbsp; 18672948856</a></li>
+							<!--<li class="github"><i class="fa fa-github"></i> <a href="https://github.com/UniFreak"> &nbsp;&nbsp;https://github.com/UniFreak</a></li>-->
                         </ul>
                     </div>
                 </div>
