--- a/freemind.html
+++ b/freemind.html
@@ -1,6 +1,12 @@
 <!DOCTYPE HTML>
 <html>
-<body>
-    <a href="./freemind/C陷阱与缺陷.html">C陷阱与缺陷</a>
-</body>
+    <head>
+        {% include head_base.html %}
+    </head>
+    <body>
+        {% include header.html %}
+        <a href="./freemind/C陷阱与缺陷.html">C陷阱与缺陷</a>
+
+        {% include footer.html %}
+    </body>
 </html>
