--- a/freemind.html
+++ b/freemind.html
@@ -3,6 +3,11 @@
     <head>
     </head>
     <body>
+        <h2>书</h2>
         <a href="./freemind/C陷阱与缺陷.html">C陷阱与缺陷</a>
+
+        <h2>编程语言</h2>
+        <a href="./freemind/C.html">C陷阱与缺陷</a>
+        <a href="./freemind/Dart.html">C陷阱与缺陷</a>
     </body>
 </html>
