--- a/freemind.html
+++ b/freemind.html
@@ -7,7 +7,7 @@
         <a href="./freemind/C陷阱与缺陷.html">C陷阱与缺陷</a>
 
         <h2>编程语言</h2>
-        <a href="./freemind/C.html">C陷阱与缺陷</a>
-        <a href="./freemind/Dart.html">C陷阱与缺陷</a>
+        <a href="./freemind/C.html">C Language</a>
+        <a href="./freemind/Dart.html">Dart Language</a>
     </body>
 </html>
